# semopx-app

./: README.md  app.py  environment.yml  pyproject.toml  setup.py
.data_cache/: load_forecast_20250820.pq  load_forecast_20250821.pq  load_forecast_20250822.pq  load_forecast_20250823.pq  load_forecast_20250824.pq  load_forecast_20250825.pq  load_forecast_20250826.pq  load_forecast_20250827.pq  load_forecast_20250828.pq  load_forecast_20250829.pq  load_forecast_20250830.pq  load_forecast_20250831.pq  load_forecast_20250901.pq  load_forecast_20250902.pq  load_forecast_20250903.pq  load_forecast_20250904.pq  load_forecast_20250905.pq  load_forecast_20250906.pq  load_forecast_20250907.pq  load_forecast_20250908.pq  load_forecast_20250909.pq  load_forecast_20250910.pq  load_forecast_20250911.pq  load_forecast_20250912.pq  load_forecast_20250913.pq  load_forecast_20250914.pq  load_forecast_20250915.pq  load_forecast_20250916.pq  load_forecast_20250917.pq  load_forecast_20250918.pq  load_forecast_20250919.pq  load_forecast_20250920.pq  load_forecast_20250921.pq  load_forecast_20250922.pq  load_forecast_20250923.pq  load_forecast_20250924.pq  load_forecast_20250925.pq  load_forecast_20250926.pq  load_forecast_20250927.pq  load_forecast_20250928.pq  (+141 more)
.github/workflows/: update-cache.yml
semopx_app/: analysis.py  app.py  client.py  data_cache.py  ev_charging_strategy.py  util.py
semopx_app/.data_cache/: all_market_prices20250707.pq  all_market_prices20250708.pq  all_market_prices20250709.pq  all_market_prices20250710.pq  all_market_prices20250711.pq  all_market_prices20250712.pq  all_market_prices20250713.pq  all_market_prices20250714.pq  all_market_prices20250715.pq  all_market_prices20250716.pq  all_market_prices20250717.pq  all_market_prices20250718.pq  all_market_prices20250719.pq  all_market_prices20250720.pq  all_market_prices20250721.pq  all_market_prices20250722.pq  all_market_prices20250723.pq  all_market_prices20250724.pq  all_market_prices20250725.pq  all_market_prices20250726.pq  all_market_prices20250727.pq  all_market_prices20250728.pq  all_market_prices20250729.pq  all_market_prices20250730.pq  all_market_prices20250731.pq  all_market_prices20250801.pq  all_market_prices20250802.pq  all_market_prices20250803.pq  (+1102 more)
(+912 files in other folders)
