[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semopx-app"
version = "0.1.0"
description = "Python client for SEMO and SEMOpx energy market data with price forecasting and EV charging alerts"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Eoin Condron", email = "econdr@gmail.com"}
]
keywords = ["energy", "electricity", "market", "SEMO", "SEMOpx", "forecasting", "pricing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "lightgbm>=4.0.0",
    "tqdm>=4.65.0",
    "groupby-lib>=0.1.0",
    "pyarrow>=12.0.0",
]

[project.optional-dependencies]
alerts = [
    "plyer>=2.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
]

[project.scripts]
semopx-alert = "semopx_app.alert:main"

[project.urls]
Homepage = "https://github.com/eoincondron/semopx-app"
Repository = "https://github.com/eoincondron/semopx-app"
Issues = "https://github.com/eoincondron/semopx-app/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["semopx_app*"]

[tool.setuptools.package-data]
semopx_app = ["*.css"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=semopx_app --cov-report=term-missing"
